--- a/.github/workflows/r1s_lean_h3.yml
+++ b/.github/workflows/r1s_lean_h3.yml
@@ -5,8 +5,8 @@ on:
     branches: [ master ]
     paths:
       - '.github/workflows/r1s_lean_h3.yml'
-  schedule:
-    - cron: '10 10 */4 * *'
+  #schedule:
+  #  - cron: '10 10 */4 * *'
 
 jobs:
 
@@ -66,7 +66,8 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.sec_token }}
+          #GITHUB_TOKEN: ${{ secrets.sec_token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ steps.assemble_artifact.outputs.release_tag }}
           release_name: 自动发布 ${{ steps.assemble_artifact.outputs.release_tag }}
@@ -76,7 +77,8 @@ jobs:
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.sec_token }}
+          #GITHUB_TOKEN: ${{ secrets.sec_token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
           asset_path: ./artifact.zip
