--- a/.github/workflows/master_code_and_master_config.yml
+++ b/.github/workflows/master_code_and_master_config.yml
@@ -1,11 +1,15 @@
 name: original Build
 
 on:
-  push:
-    branches: 
-      - master
-    paths: 
-      - '.github/workflows/master_code_and_master_config.yml'  
+  # release:
+  #   types: [published]
+    watch:
+      types: [started]
+  #push:
+  #  branches: 
+  #    - master
+  #  paths: 
+  #    - '.github/workflows/master_code_and_master_config.yml'  
 
 jobs:
 
