--- a/.github/workflows/neo2.yml
+++ b/.github/workflows/neo2.yml
@@ -1,11 +1,15 @@
 name: neo2 Build
 
 on:
-  push:
-    branches: 
-      - master
-    paths:
-      - '.github/workflows/neo2.yml'
+  #push:
+  #  branches: 
+  #    - master
+  #  paths:
+  #    - '.github/workflows/neo2.yml'
+  # release:
+  #   types: [published]
+    watch:
+      types: [started]
 
 jobs:
   build:
