--- a/.github/workflows/r2s_lean_minimal.yml
+++ b/.github/workflows/r2s_lean_minimal.yml
@@ -1,10 +1,10 @@
 name: r2sLEDEopenwrt minimal 
 
 on:
-  #push:
-  #  branches: [ master ]
-  #  paths:
-  #    - '.github/workflows/r2s_lean_minimal.yml'
+  push:
+    branches: [ master ]
+    paths:
+      - '.github/workflows/r2s_lean_minimal.yml'
   #schedule:
   #  - cron: '10 08 * * *'
   # release:
