--- a/.github/workflows/master_code_and_master_config.yml
+++ b/.github/workflows/master_code_and_master_config.yml
@@ -3,8 +3,8 @@ name: original Build
 on:
   # release:
   #   types: [published]
-    watch:
-      types: [started]
+  ##  watch:
+  ##    types: [started]
   #push:
   #  branches: 
   #    - master
