--- a/.github/workflows/r1s_add_passwall.yml
+++ b/.github/workflows/r1s_add_passwall.yml
@@ -5,8 +5,8 @@ on:
 #    - cron: 0 20 * * *
   # release:
   #   types: [published]
-  watch:
-     types: [started]
+  ##watch:
+  ##   types: [started]
   #push:
   #  branches: 
   #    - master
