--- a/.github/workflows/r1s_lienol.yml
+++ b/.github/workflows/r1s_lienol.yml
@@ -10,8 +10,8 @@ on:
   #  - cron: 0 0 */10 * *
   # release:
   #   types: [published]
-    watch:
-      types: [started]
+  ##  watch:
+  ##    types: [started]
     
 jobs:
 
