--- a/.github/workflows/r2s_add_passwall.yml
+++ b/.github/workflows/r2s_add_passwall.yml
@@ -10,8 +10,8 @@ on:
 #    - cron: '10 13 * * *'
   # release:
   #   types: [published]
-    watch:
-      types: [started]
+  ##  watch:
+  ##    types: [started]
     
 jobs:
   build:
