--- a/.github/workflows/r2s_lienol.yml
+++ b/.github/workflows/r2s_lienol.yml
@@ -10,8 +10,8 @@ on:
   #  - cron: '30 10 */5 * *'
   # release:
   #   types: [published]
-    watch:
-      types: [started]
+  ##  watch:
+  ##    types: [started]
     
 jobs:
 
