--- a/.github/workflows/master_code_and_master_config.yml
+++ b/.github/workflows/master_code_and_master_config.yml
@@ -1,8 +1,8 @@
 name: original Build
 
 on:
-  # release:
-  #   types: [published]
+   release:
+     types: [published]
   ##  watch:
   ##    types: [started]
   #push:
