--- a/.github/workflows/r1s_add_passwall.yml
+++ b/.github/workflows/r1s_add_passwall.yml
@@ -3,8 +3,8 @@ name: r1s+passwall
 on:
 #  schedule:
 #    - cron: 0 20 * * *
-  # release:
-  #   types: [published]
+   release:
+     types: [published]
   ##watch:
   ##   types: [started]
   #push:
