--- a/.github/workflows/r2s_lean_minimal.yml
+++ b/.github/workflows/r2s_lean_minimal.yml
@@ -1,7 +1,7 @@
 name: r2sLEDEopenwrt minimal 
 
 on:
-  #push:
+  ##push:
   #  branches: [ master ]
   #  paths:
   #    - '.github/workflows/r2s_lean_minimal.yml'
@@ -118,6 +118,7 @@ jobs:
           release_name: 自动发布 ${{ steps.assemble_artifact.outputs.release_tag }}
           draft: false
           prerelease: false
+
       - name: Upload Release Asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
