--- a/.github/workflows/r2s_lean.yml
+++ b/.github/workflows/r2s_lean.yml
@@ -7,8 +7,8 @@ on:
   #    - '.github/workflows/r2s_lean.yml'
   #schedule:
   #  - cron: '10 09 * * *'
-  # release:
-  #   types: [published]
+   release:
+     types: [published]
   ##  watch:
   ##    types: [started]
     
